# jarvis-sense

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: ARCHITECTURE.md  HOW_TO_ADD_MODULE.md  NODE_PYTHON_BRIDGE.md  WAKE_WORD.md
jarvis_sense/: __init__.py
jarvis_sense/audio/: __init__.py  capture.py  interfaces.py  resample.py  services.py
jarvis_sense/audio/tests/: test_loopback_service.py  test_resample.py
jarvis_sense/brain/: __init__.py  config.py  demo.py  interfaces.py  models.py  service.py
jarvis_sense/brain/providers/: __init__.py  anthropic.py  groq.py  ollama.py
jarvis_sense/brain/tests/: test_brain_service.py
jarvis_sense/bridge/: __init__.py  dispatch.py  jarvis_client.py  ws_server.py
jarvis_sense/bridge/tests/: test_dispatch.py  test_jarvis_client.py  test_ws_payload.py
jarvis_sense/core/: __init__.py  audio_devices.py  config.py  errors.py  event_types.py  events.py  lifecycle.py  logging.py
jarvis_sense/microphone/: __init__.py  interfaces.py  models.py  services.py  vad.py
jarvis_sense/ocr/: __init__.py  interfaces.py  services.py
jarvis_sense/screen/: __init__.py  capture.py  diff.py  interfaces.py  models.py
jarvis_sense/services/: __init__.py  app.py
jarvis_sense/speech/: __init__.py  acoustic.py  config.py  interfaces.py  services.py  utils.py  wake_demo.py  wake_word.py
jarvis_sense/tts/: __init__.py  config.py  demo.py  interfaces.py  models.py  playback.py  services.py  utils.py
jarvis_sense/vision/: __init__.py  config.py  demo.py  interfaces.py  services.py
models/: README.md
(+23 files in other folders)
